--- a/style.css
+++ b/style.css
@@ -9,34 +9,33 @@ a {
 }
 
 body {
-    background-color: 
-    #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 .root-section {
     padding: 0px 10px 10px 20px;
     display: flex;
+    gap: 10px;
 }
 
 .aside-left-menu {
-    width: 236px;
+    width: 100%;
+    max-width: 236px;
     display: flex;
     flex-direction: column;
-    padding-right: 10px;
 }
 
 .logo {
     padding: 25px 0 16px 16px;
-    background-color: 
-    white;
+    background-color: white;
     border-radius: 0 0 20px 20px;
 }
 
 .catalog-tree {
+    display: flex;
     flex-direction: column;
     padding: 25px 0 16px 16px;
-    background-color: 
-    white;
+    background-color: white;
     border-radius: 20px;
     margin-top: 10px;
 }
@@ -45,20 +44,89 @@ body {
     padding-bottom: 20px;
 }
 
+
 .main-content {
-    padding-top: 10px;
+    padding-top: 20px;
     margin-right: 10px;
+    max-width: 1144px;
     width: 100%;
-    background-color: 
-    white;
     display: flex;
+    flex-direction: column;
 }
 
-.aside-right-menu {
-    width: 336px;
+.search-header {
     display: flex;
-    background-color: 
-    white;
+    height: 80px;
+    padding: 16px;
+    position: sticky;
+    background-color: white;
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+}
+
+.search-input {
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    outline: none;
+    background-color: #f2f2f2;
+    border-radius: 100px;
+    padding: 0 44px;
+}
+
+.promo-categories {
+    width: 100%;
+}
+
+
+.swiper {
+    width: 100%;
+    display: flex;
+    padding: 0 10px;
+    background-color: white;
+    gap: 8px;
+}
+
+.promo-categories-card {
+    flex: 1 1;
+    height: auto;
+    overflow: hidden;
+    flex-direction: column;
+    display: flex;
+    border-radius: 20px;
+    position: relative;
+    background-color: white;
+}
+
+.card-title {
+    position: absolute;
+    width: 100%;
+    height: 40%;
+    top: 0;
+    color: white;
+    font-size: 16px;
+    padding: 12px;
+    font-weight: 700;
+    background: linear-gradient(0deg,transparent,rgba(0,0,0,.003) 6.67%,rgba(0,0,0,.014) 13.33%,rgba(0,0,0,.033) 20%,rgba(0,0,0,.059) 26.67%,rgba(0,0,0,.093) 33.33%,rgba(0,0,0,.133) 40%,rgba(0,0,0,.177) 46.67%,rgba(0,0,0,.223) 53.33%,rgba(0,0,0,.267) 60%,rgba(0,0,0,.307) 66.67%,rgba(0,0,0,.341) 73.33%,rgba(0,0,0,.367) 80%,rgba(0,0,0,.386) 86.67%,rgba(0,0,0,.397) 93.33%,rgba(0,0,0,.4));
+}
+
+.card-image {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+.aside-right-menu {
+    max-width: 236px;
+    width: 100%;
+    flex-direction: column;
+    padding-top: 20px;
+    min-height: 100vh;
+}
+
+.promo {
+    height: 50%;
+    border-radius: 20px;
+    background-color: white;
 }
 
 
